GL/src/test/deca/syntax/valid/deca_sans_objet/LEQ.deca
// Description :
//  Teste les comparaisons <= sans objet.
//
// Resultats :
// OK
{
    int a = 3;
    int b = 5;
    if (a <= b) {
        println(1);
    }
}
