GL/src/test/deca/syntax/invalid/deca_sans_objet/lvalue_invalide.deca
// Description :
//  test lvalue invalide
//
// Resultat :
// Erreur syntaxique
// Ligne 8 : caractère inattendu '='
{
    (a + 1) = 3;
}
